adjusted main container spacing and adjusted the styling in the footer

--- a/style.css
+++ b/style.css
@@ -40,11 +40,17 @@ header {
     background-color: #DBDBCE;
 }
 
+figure {
+    width: 100rem;
+    margin: auto;
+
+}
+
 #img-div {
     border: 0px solid red;
-    width: 80%;
+    width: 100rem;
     margin: auto;
-    padding: 25px 10px;
+    padding: 25px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,7 +74,7 @@ header {
 }
 
 section {
-    width: 80%;
+    width: 100rem;
     margin: auto;
     margin-bottom: 3rem;
     background-color: #F5F5E4;
@@ -76,9 +82,10 @@ section {
 }
 
 h2 {
-    margin: 3rem auto;
+    margin: 0rem auto;
     margin-bottom: 0rem;
-    padding: 2rem 12rem;
+    padding: 4rem 12rem;
+
     background-color: #F4F4E5;
     border: 0px solid #75756E;
 }
@@ -94,7 +101,7 @@ h2 {
 }
 
 .inner-list {
-    border: 0px solid black;
+    border: 0px solid #363632;
     list-style-position: outside;
     margin: 18px;
     line-height: 2em;
@@ -105,10 +112,16 @@ footer {
     display: flex;
     flex-direction: column;
     background-color: #DBDBCE;
+    padding: 3rem;
     border-top: 2px solid #363632;
+
 }
 
 .credits {
-    border: 0px solid black;
-    margin: 1em;
+    border: 0px solid #363632;
+    margin: 0em auto;
+    width: 50%;
+    background-color: #F4F4E5;
+    padding: 1rem;
+
 }
